Implementando itens do menu

--- a/src/app/restaurant-detail/reviews/reviews.component.html
+++ b/src/app/restaurant-detail/reviews/reviews.component.html
@@ -12,7 +12,7 @@
           src="assets/img/reactions/pissed.png"
         />
         <img
-          *ngIf="review.rating >= 3 && eview.rating < 4"
+          *ngIf="review.rating >= 3 && review.rating < 4"
           alt="User Image"
           class="img-circle"
           src="assets/img/reactions/soso.png"
