Validação no form de compra

--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -2,7 +2,9 @@
 
 <section class="content">
   <section class="invoice">
-    <form>
+    {{ form.valid }}
+    {{ form.value | json }}
+    <form #form="ngForm" novalidate>
       <div class="row">
         <div class="col-xs-12">
           <h2 class="page-header">
@@ -23,8 +25,12 @@
             <input
               type="text"
               class="form-control"
-              id="inputSuccess"
+              name="address"
+              required
+              minlength="5"
+              ngModel
               placeholder="Endereço"
+              autocomplete="off"
             />
             <span class="help-block"></span>
           </div>
@@ -37,8 +43,11 @@
             <input
               type="text"
               class="form-control"
-              id="inputSuccess"
+              name="number"
+              required
+              ngModel
               placeholder="Número"
+              autocomplete="off"
             />
             <span class="help-block"><i class="fa fa-check"></i> Ok</span>
           </div>
@@ -51,7 +60,8 @@
             <input
               type="text"
               class="form-control"
-              id="inputSuccess"
+              name="optional"
+              ngModel
               placeholder="Complemento"
             />
             <span class="help-block"
@@ -198,9 +208,9 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <a href="order-summary.html" class="btn btn-success pull-right"
-          ><i class="fa fa-credit-card"></i> Concluir Pedido
-        </a>
+        <button class="btn btn-success pull-right" [disabled]="!form.valid">
+          <i class="fa fa-credit-card"></i> Concluir Pedido
+        </button>
       </div>
     </div>
   </section>
