--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -54,7 +54,7 @@
             <input
               type="text"
               class="form-control"
-              name="optional"
+              name="optionalAddress"
               ngModel
               placeholder="Complemento"
             />
@@ -109,6 +109,7 @@
     <div class="row">
       <div class="col-xs-12">
         <button
+          (click)="checkOrder(form.value)"
           class="btn btn-success pull-right"
           [disabled]="!form.valid || cartItems().length === 0"
         >
