--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -16,7 +16,10 @@
           <p class="lead">Seus Dados:</p>
         </div>
         <div class="col-sm-6 col-xs-12">
-          <mt-input-container errorMessage="Campo obrigatório" label="Nome">
+          <mt-input-container
+            errorMessage="Campo obrigatório e com 5 caracteres"
+            label="Nome"
+          >
             <input
               class="form-control"
               formControlName="name"
