--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -11,10 +11,11 @@
   </div>
   <div class="row">
     <div class="col-xs-12 search-bar" [@toggleSearch]="searchBarState">
-      <form>
+      <form [formGroup]="searchForm">
         <div class="form-group">
           <input
             type="text"
+            formControlName="searchControl"
             class="form-control"
             placeholder="O que você esta procurando"
           />
