--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -4,7 +4,10 @@
       <h1>
         Todos os Restaurantes
         <a (click)="toggleSearch()" class="search-link pull-right"
-          ><i class="fa fa-search"></i
+          ><span *ngIf="iptSearch.value"
+            ><small>"{{ iptSearch.value }}"</small></span
+          >
+          <i class="fa fa-search"></i
         ></a>
       </h1>
     </div>
@@ -15,6 +18,7 @@
         <div class="form-group">
           <input
             type="text"
+            #iptSearch
             formControlName="searchControl"
             class="form-control"
             placeholder="O que você esta procurando"
